feat: Add simple command-line interface

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,7 @@ exclude = [".*"]
 xiaomi-ble = { git = "https://github.com/Holzhaus/xiaomi-ble-rs.git" }
 tokio = { version = "1.37", features = ["macros", "rt", "rt-multi-thread"]}
 btleplug = "0.11"
+clap = { version = "4.5", features = ["derive"] }
 futures = "0.3.30"
 pretty_env_logger = "0.5"
 log = "0.4"
